src/Test/Fixtures/Good/BitQubit/extraWhitespaceBitDeclaration.lf
let singleBit  :   bit   =   0;