src/Test/Fixtures/Bad/BitQubit/unexpectedLiteralAfterMeasrBitDeclaration.lf
let b : bit = measr(q) 0;